samples/_failures_safe/1761362409_fe6903_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b89c2e9.c: In function ‘main’:
./samples/SAFE/__tmp_4b89c2e9.c:131:16: error: missing terminating " character
  131 |         printf("Error: Could
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4b89c2e9.c:131:9: error: expected expression at end of input
  131 |         printf("Error: Could
      |         ^~~~~~
./samples/SAFE/__tmp_4b89c2e9.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b89c2e9.c:131:9: error: expected declaration or statement at end of input
